crates/friction-cli/tests/snapshots/snapshot__check_json__forum_llm_0720879ca70251ed.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 8.333333333333334,
      "lo": 3.4918032786885247,
      "hi": 22.612244897959183,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "sentence_length_stddev",
      "value": 7.123017179354107,
      "lo": 3.4227587963188086,
      "hi": 13.411800359716398,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "sentence_length_cv",
      "value": 0.8547620615224927,
      "lo": 0.49754649007902846,
      "hi": 1.3591689344136941,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "discourse_marker_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 4.237288135593221,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "triad_rate",
      "value": 0.015151515151515152,
      "lo": 0.0,
      "hi": 0.08695652173913043,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "contraction_ratio",
      "value": 1.0,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "bullet_parallelism",
      "value": 0.6666666666666666,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true,
      "weak_signal": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.1785714285714286,
      "lo": 1.0357142857142858,
      "hi": 3.5384615384615383,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.4565611870702836,
      "lo": 0.179177669748504,
      "hi": 0.7953949089757174,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 4.244482173174872,
      "in_envelope": true,
      "weak_signal": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.9682539682539684,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "participial_closer_rate",
      "value": 0.015151515151515152,
      "lo": 0.0,
      "hi": 0.03125,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.009259259259259259,
      "in_envelope": true,
      "weak_signal": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 11.320754716981131,
      "lo": 0.0,
      "hi": 21.634615384615383,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 5.660377358490566,
      "lo": 8.59106529209622,
      "hi": 48.821548821548824,
      "in_envelope": false,
      "weak_signal": false
    },
    {
      "name": "heading_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 43.04635761589404,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "list_item_density",
      "value": 32.075471698113205,
      "lo": 0.0,
      "hi": 98.26589595375722,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "bold_span_density",
      "value": 18.867924528301888,
      "lo": 0.0,
      "hi": 14.705882352941176,
      "in_envelope": false,
      "weak_signal": false
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.015384615384615385,
      "lo": 0.0,
      "hi": 0.13793103448275862,
      "in_envelope": true,
      "weak_signal": false
    },
    {
      "name": "top_opener_concentration",
      "value": 0.09836065573770492,
      "lo": 0.04424778761061947,
      "hi": 0.2153846153846154,
      "in_envelope": true,
      "weak_signal": false
    }
  ],
  "spans": [
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 0,
      "end": 156,
      "line": 1,
      "column": 1,
      "score": 263,
      "message": "machine-favored phrasing peaks at 'and detailed analysis of'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 183,
      "end": 267,
      "line": 5,
      "column": 3,
      "score": 61,
      "message": "machine-favored phrasing peaks at 'MySQL - A Detailed Explanation'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 273,
      "end": 435,
      "line": 7,
      "column": 3,
      "score": 443,
      "message": "machine-favored phrasing peaks at 'they actually help?'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 450,
      "end": 675,
      "line": 11,
      "column": 1,
      "score": 513,
      "message": "machine-favored phrasing peaks at 'up your queries.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 679,
      "end": 704,
      "line": 13,
      "column": 3,
      "score": 11,
      "message": "machine-favored phrasing peaks at 'a Covering Index?'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 708,
      "end": 1064,
      "line": 15,
      "column": 1,
      "score": 2340,
      "message": "machine-favored phrasing peaks at 'row retrieval operation.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1089,
      "end": 1267,
      "line": 19,
      "column": 1,
      "score": 442,
      "message": "machine-favored phrasing peaks at 'columns used in the'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1314,
      "end": 1394,
      "line": 19,
      "column": 224,
      "score": 103,
      "message": "machine-favored phrasing peaks at 'to use it.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1398,
      "end": 1431,
      "line": 21,
      "column": 3,
      "score": 6,
      "message": "machine-favored phrasing peaks at 'with an Example:'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1435,
      "end": 1466,
      "line": 23,
      "column": 1,
      "score": 7,
      "message": "machine-favored phrasing peaks at 'have a table called'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1476,
      "end": 1503,
      "line": 23,
      "column": 42,
      "score": 6,
      "message": "machine-favored phrasing peaks at 'the following columns:'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1650,
      "end": 1687,
      "line": 31,
      "column": 1,
      "score": 18,
      "message": "machine-favored phrasing peaks at 'query like this:'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1860,
      "end": 2065,
      "line": 39,
      "column": 1,
      "score": 609,
      "message": "machine-favored phrasing peaks at 'It’s then searching for'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2086,
      "end": 2189,
      "line": 39,
      "column": 225,
      "score": 138,
      "message": "machine-favored phrasing peaks at 'in the table.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2193,
      "end": 2232,
      "line": 41,
      "column": 3,
      "score": 11,
      "message": "machine-favored phrasing peaks at 'Before Covering Index:'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2264,
      "end": 2285,
      "line": 43,
      "column": 29,
      "score": 7,
      "message": "machine-favored phrasing peaks at 'of this query:'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2839,
      "end": 2896,
      "line": 53,
      "column": 16,
      "score": 49,
      "message": "machine-favored phrasing peaks at 'subqueries or joins).'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2926,
      "end": 2968,
      "line": 54,
      "column": 30,
      "score": 29,
      "message": "machine-favored phrasing peaks at 'non-correlated query.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2992,
      "end": 3018,
      "line": 55,
      "column": 24,
      "score": 12,
      "message": "machine-favored phrasing peaks at 'table being queried.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3047,
      "end": 3082,
      "line": 56,
      "column": 29,
      "score": 22,
      "message": "machine-favored phrasing peaks at 'an index here.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3101,
      "end": 3175,
      "line": 57,
      "column": 19,
      "score": 85,
      "message": "machine-favored phrasing peaks at 'case, the entire'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3221,
      "end": 3295,
      "line": 58,
      "column": 29,
      "score": 77,
      "message": "machine-favored phrasing peaks at 'table based on the'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3315,
      "end": 3339,
      "line": 60,
      "column": 3,
      "score": 6,
      "message": "machine-favored phrasing peaks at 'a Covering Index:'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3343,
      "end": 3418,
      "line": 62,
      "column": 1,
      "score": 77,
      "message": "machine-favored phrasing peaks at 'selected columns and the'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3517,
      "end": 3574,
      "line": 68,
      "column": 1,
      "score": 44,
      "message": "machine-favored phrasing peaks at 'for our query.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3578,
      "end": 3616,
      "line": 70,
      "column": 3,
      "score": 11,
      "message": "machine-favored phrasing peaks at 'After Covering Index:'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3620,
      "end": 3670,
      "line": 72,
      "column": 1,
      "score": 34,
      "message": "machine-favored phrasing peaks at 'again and examine the'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 4243,
      "end": 4266,
      "line": 82,
      "column": 16,
      "score": 8,
      "message": "machine-favored phrasing peaks at 'a simple query.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 4399,
      "end": 4475,
      "line": 85,
      "column": 33,
      "score": 105,
      "message": "machine-favored phrasing peaks at 'filtering, specifically by'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 4526,
      "end": 4629,
      "line": 86,
      "column": 19,
      "score": 190,
      "message": "machine-favored phrasing peaks at 'the table itself.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 4658,
      "end": 4724,
      "line": 87,
      "column": 29,
      "score": 80,
      "message": "machine-favored phrasing peaks at 'satisfy the query.'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 4728,
      "end": 4775,
      "line": 89,
      "column": 3,
      "score": 28,
      "message": "machine-favored phrasing peaks at 'vs. \"Using where'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 4780,
      "end": 4980,
      "line": 91,
      "column": 1,
      "score": 577,
      "message": "machine-favored phrasing peaks at 'rows based on the'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 4989,
      "end": 5065,
      "line": 91,
      "column": 204,
      "score": 82,
      "message": "machine-favored phrasing peaks at 'non-covering one).'"
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 5074,
      "end": 5255,
      "line": 97,
      "column": 1,
      "score": 479,
      "message": "machine-favored phrasing peaks at 'more complex scenarios?'"
    }
  ],
  "tell_counts": {
    "dms": 35
  },
  "dms": {
    "mean_machine": 13.197712418300654,
    "mean_human": 1.6013071895424837,
    "differential": 11.59640522875817,
    "token_count": 612
  }
}
