crates/friction-cli/tests/snapshots/snapshot__check_json__forum_llm_137c3759df60fa49.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "forum",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 11.465116279069768,
      "lo": 7.14,
      "hi": 21.545454545454547,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 9.693797674728527,
      "lo": 6.973680679685744,
      "hi": 13.411800359716398,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.8455036511426504,
      "lo": 0.5491203194353567,
      "hi": 0.9915185800501058,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 6.122448979591836,
      "lo": 0.0,
      "hi": 4.237288135593221,
      "in_envelope": false
    },
    {
      "name": "triad_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0425531914893617,
      "in_envelope": true
    },
    {
      "name": "contraction_ratio",
      "value": 0.0,
      "lo": 0.2,
      "hi": 0.9,
      "in_envelope": false
    },
    {
      "name": "bullet_parallelism",
      "value": 0.6666666666666666,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.4333333333333333,
      "lo": 1.2258064516129032,
      "hi": 2.4761904761904763,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.46569731150001803,
      "lo": 0.38987177379235843,
      "hi": 0.7590772998235673,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 2.028397565922921,
      "lo": 0.0,
      "hi": 2.4154589371980677,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 2.9994001199760048,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.023255813953488372,
      "lo": 0.0,
      "hi": 0.03125,
      "in_envelope": true
    },
    {
      "name": "not_just_but_rate",
      "value": 0.023255813953488372,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": false
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.03333333333333333,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": false
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 10.204081632653061,
      "lo": 0.0,
      "hi": 19.656019656019655,
      "in_envelope": true
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 30.612244897959183,
      "lo": 19.41747572815534,
      "hi": 48.821548821548824,
      "in_envelope": true
    },
    {
      "name": "heading_density",
      "value": 6.122448979591836,
      "lo": 0.0,
      "hi": 8.103727714748784,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 6.122448979591836,
      "lo": 0.0,
      "hi": 22.22222222222222,
      "in_envelope": true
    },
    {
      "name": "bold_span_density",
      "value": 14.285714285714286,
      "lo": 0.0,
      "hi": 10.482180293501049,
      "in_envelope": false
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.1111111111111111,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.12195121951219512,
      "lo": 0.06944444444444445,
      "hi": 0.18181818181818182,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2,
      "end": 45,
      "line": 1,
      "column": 3,
      "score": 8
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 49,
      "end": 499,
      "line": 3,
      "column": 1,
      "score": 2572
    },
    {
      "channel": "literal",
      "frame_id": "sub.crucial_for",
      "start": 191,
      "end": 202,
      "line": 3,
      "column": 139,
      "score": null
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 534,
      "end": 793,
      "line": 7,
      "column": 1,
      "score": 722
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 821,
      "end": 1089,
      "line": 11,
      "column": 6,
      "score": 1001
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1301,
      "end": 1432,
      "line": 20,
      "column": 14,
      "score": 194
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1437,
      "end": 1505,
      "line": 20,
      "column": 148,
      "score": 72
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1512,
      "end": 1699,
      "line": 22,
      "column": 6,
      "score": 442
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 1726,
      "end": 1826,
      "line": 22,
      "column": 220,
      "score": 151
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2049,
      "end": 2079,
      "line": 32,
      "column": 4,
      "score": 10
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2092,
      "end": 2125,
      "line": 32,
      "column": 47,
      "score": 6
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2200,
      "end": 2286,
      "line": 32,
      "column": 155,
      "score": 133
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2293,
      "end": 2631,
      "line": 34,
      "column": 6,
      "score": 1716
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2799,
      "end": 2875,
      "line": 43,
      "column": 4,
      "score": 47
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 2882,
      "end": 2979,
      "line": 43,
      "column": 85,
      "score": 136
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3014,
      "end": 3310,
      "line": 47,
      "column": 1,
      "score": 1048
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3312,
      "end": 3633,
      "line": 49,
      "column": 1,
      "score": 1057
    },
    {
      "channel": "dms",
      "frame_id": "dms.machine",
      "start": 3635,
      "end": 3888,
      "line": 51,
      "column": 1,
      "score": 759
    }
  ],
  "tell_counts": {
    "dms": 17,
    "sub": 1
  },
  "dms": {
    "mean_machine": 20.83742911153119,
    "mean_human": 1.6521739130434783,
    "differential": 19.185255198487713,
    "token_count": 529
  }
}
