crates/friction-cli/tests/snapshots/snapshot__check_json__forum_quarantine_0710f627ec229d97.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "forum",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 9.964912280701755,
      "lo": 7.14,
      "hi": 21.545454545454547,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 9.20138226130298,
      "lo": 6.973680679685744,
      "hi": 13.411800359716398,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.9233781494617427,
      "lo": 0.5491203194353567,
      "hi": 0.9915185800501058,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 1.7889087656529516,
      "lo": 0.0,
      "hi": 4.237288135593221,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.017543859649122806,
      "lo": 0.0,
      "hi": 0.0425531914893617,
      "in_envelope": true
    },
    {
      "name": "contraction_ratio",
      "value": 0.8333333333333334,
      "lo": 0.2,
      "hi": 0.9,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.9375,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.3255813953488371,
      "lo": 1.2258064516129032,
      "hi": 2.4761904761904763,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.48045838377646166,
      "lo": 0.38987177379235843,
      "hi": 0.7590772998235673,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 1.7605633802816902,
      "lo": 0.0,
      "hi": 2.4154589371980677,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 2.9994001199760048,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.03125,
      "in_envelope": true
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 17.88908765652952,
      "lo": 0.0,
      "hi": 19.656019656019655,
      "in_envelope": true
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 12.522361359570661,
      "lo": 19.41747572815534,
      "hi": 48.821548821548824,
      "in_envelope": false
    },
    {
      "name": "heading_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 8.103727714748784,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 19.677996422182467,
      "lo": 0.0,
      "hi": 22.22222222222222,
      "in_envelope": true
    },
    {
      "name": "bold_span_density",
      "value": 10.73345259391771,
      "lo": 0.0,
      "hi": 10.482180293501049,
      "in_envelope": false
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.017857142857142856,
      "lo": 0.0,
      "hi": 0.1111111111111111,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.14814814814814814,
      "lo": 0.06944444444444445,
      "hi": 0.18181818181818182,
      "in_envelope": true
    }
  ],
  "spans": [
    {
      "channel": "literal",
      "frame_id": "span.simply",
      "start": 932,
      "end": 938,
      "line": 13,
      "column": 44,
      "score": null
    }
  ],
  "tell_counts": {
    "span": 1
  },
  "dms": {
    "mean_machine": 1.5390879478827362,
    "mean_human": 13.817589576547231,
    "differential": -12.278501628664495,
    "token_count": 614
  }
}
