crates/friction-cli/tests/snapshots/snapshot__check_json__forum_quarantine_0a3d4030ac673c91.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "forum",
  "family": "qwen",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 8.379310344827585,
      "lo": 7.14,
      "hi": 21.545454545454547,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 7.812076385661513,
      "lo": 6.973680679685744,
      "hi": 13.411800359716398,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.9323054122805922,
      "lo": 0.5491203194353567,
      "hi": 0.9915185800501058,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 2.0964360587002098,
      "lo": 0.0,
      "hi": 4.237288135593221,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0425531914893617,
      "in_envelope": true
    },
    {
      "name": "contraction_ratio",
      "value": 0.5,
      "lo": 0.2,
      "hi": 0.9,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.6833333333333333,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.2608695652173914,
      "lo": 1.2258064516129032,
      "hi": 2.4761904761904763,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.55921637035265,
      "lo": 0.38987177379235843,
      "hi": 0.7590772998235673,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 2.4154589371980677,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 2.9994001199760048,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.03125,
      "in_envelope": true
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 2.0964360587002098,
      "lo": 0.0,
      "hi": 19.656019656019655,
      "in_envelope": true
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 18.867924528301888,
      "lo": 19.41747572815534,
      "hi": 48.821548821548824,
      "in_envelope": false
    },
    {
      "name": "heading_density",
      "value": 16.771488469601678,
      "lo": 0.0,
      "hi": 8.103727714748784,
      "in_envelope": false
    },
    {
      "name": "list_item_density",
      "value": 44.0251572327044,
      "lo": 0.0,
      "hi": 22.22222222222222,
      "in_envelope": false
    },
    {
      "name": "bold_span_density",
      "value": 10.482180293501049,
      "lo": 0.0,
      "hi": 10.482180293501049,
      "in_envelope": true
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.03508771929824561,
      "lo": 0.0,
      "hi": 0.1111111111111111,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.1206896551724138,
      "lo": 0.06944444444444445,
      "hi": 0.18181818181818182,
      "in_envelope": true
    }
  ],
  "spans": [],
  "tell_counts": {},
  "dms": [
    {
      "family": "qwen",
      "mean_machine": 0.9305816135084428,
      "mean_human": 16.54033771106942,
      "differential": -15.609756097560977,
      "token_count": 533
    },
    {
      "family": "gemma",
      "mean_machine": 1.0919324577861163,
      "mean_human": 16.54033771106942,
      "differential": -15.448405253283303,
      "token_count": 533
    },
    {
      "family": "llama",
      "mean_machine": 1.026266416510319,
      "mean_human": 16.54033771106942,
      "differential": -15.5140712945591,
      "token_count": 533
    },
    {
      "family": "granite",
      "mean_machine": 0.975609756097561,
      "mean_human": 16.54033771106942,
      "differential": -15.564727954971858,
      "token_count": 533
    }
  ]
}
