crates/friction-cli/tests/snapshots/snapshot__check_json__readme_human_0217ca71eb7abfce.snap
---
source: crates/friction-cli/tests/snapshot.rs
expression: stdout
---
{
  "genre": "readme",
  "metrics": [
    {
      "name": "sentence_length_mean",
      "value": 4.518518518518518,
      "lo": 3.4918032786885247,
      "hi": 8.028436018957345,
      "in_envelope": true
    },
    {
      "name": "sentence_length_stddev",
      "value": 4.489661955189864,
      "lo": 3.4227587963188086,
      "hi": 7.179325061127496,
      "in_envelope": true
    },
    {
      "name": "sentence_length_cv",
      "value": 0.9936137113944782,
      "lo": 0.8732200181547038,
      "hi": 1.3591689344136941,
      "in_envelope": true
    },
    {
      "name": "discourse_marker_density",
      "value": 2.0242914979757085,
      "lo": 0.0,
      "hi": 3.1847133757961785,
      "in_envelope": true
    },
    {
      "name": "triad_rate",
      "value": 0.009259259259259259,
      "lo": 0.0,
      "hi": 0.014218009478672985,
      "in_envelope": true
    },
    {
      "name": "contraction_ratio",
      "value": 0.5714285714285714,
      "lo": 0.0,
      "hi": 1.0,
      "in_envelope": true
    },
    {
      "name": "bullet_parallelism",
      "value": 0.7777777777777777,
      "lo": 0.5,
      "hi": 0.9138888888888889,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_mean",
      "value": 1.148936170212766,
      "lo": 1.0357142857142858,
      "hi": 1.2946428571428572,
      "in_envelope": true
    },
    {
      "name": "paragraph_shape_cv",
      "value": 0.3581311038113648,
      "lo": 0.179177669748504,
      "hi": 0.5170232290628554,
      "in_envelope": true
    },
    {
      "name": "em_dash_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "semicolon_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 3.9682539682539684,
      "in_envelope": true
    },
    {
      "name": "participial_closer_rate",
      "value": 0.009259259259259259,
      "lo": 0.0,
      "hi": 0.011363636363636364,
      "in_envelope": true
    },
    {
      "name": "not_just_but_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "ritual_marker_rate",
      "value": 0.0,
      "lo": 0.0,
      "hi": 0.0,
      "in_envelope": true
    },
    {
      "name": "llm_favored_phrase_rate",
      "value": 12.145748987854251,
      "lo": 0.0,
      "hi": 21.634615384615383,
      "in_envelope": true
    },
    {
      "name": "human_favored_phrase_rate",
      "value": 24.291497975708502,
      "lo": 8.59106529209622,
      "hi": 35.46099290780142,
      "in_envelope": true
    },
    {
      "name": "heading_density",
      "value": 28.34008097165992,
      "lo": 10.380622837370241,
      "hi": 43.04635761589404,
      "in_envelope": true
    },
    {
      "name": "list_item_density",
      "value": 38.46153846153846,
      "lo": 4.926108374384237,
      "hi": 98.26589595375722,
      "in_envelope": true
    },
    {
      "name": "bold_span_density",
      "value": 0.0,
      "lo": 0.0,
      "hi": 14.705882352941176,
      "in_envelope": true
    },
    {
      "name": "sentence_opener_repeat_rate",
      "value": 0.037383177570093455,
      "lo": 0.007874015748031496,
      "hi": 0.13793103448275862,
      "in_envelope": true
    },
    {
      "name": "top_opener_concentration",
      "value": 0.11458333333333333,
      "lo": 0.04424778761061947,
      "hi": 0.16091954022988506,
      "in_envelope": true
    }
  ],
  "findings": []
}
